# omni-evaluation

./: .gitmodules  README.md  mecanum_robot_setup.sh  motor_state.xml  rosbag.sh  spawn_can.sh
src/fwd_4ws_lower_control/: CMakeLists.txt  package.xml
src/fwd_4ws_lower_control/launch/: pro_platform.launch
src/fwd_4ws_lower_control/src/: fwd_control.cpp
src/fwd_4ws_lower_control/src/include/: Platform_GM6020.hpp  Platform_M3508.hpp  fwd_control.h
src/mecanum_lower_control/: CMakeLists.txt  package.xml
src/mecanum_lower_control/launch/: pro_platform.launch
src/mecanum_lower_control/src/: Ramp_Test.cpp  mecanum_control.cpp
src/mecanum_lower_control/src/include/: Platform_M3508.hpp
src/path_load/src/: square.csv
src/path_load/src/straight/: 0-2m.csv  0-4m.csv  135-2m.csv  135-4m.csv  180-2m.csv  180-4m.csv  225-2m.csv  225-4m.csv  270-2m.csv  270-4m.csv  315-2m.csv  315-4m.csv  45-2m.csv  45-4m.csv  90-2m.csv  90-4m.csv
src/pure_pursuit_controller/launch/: control_indoor.launch
src/pure_pursuit_controller/launch/includes/: odom.rviz
src/pure_pursuit_controller/src/: upper_controller_angle.cpp
src/pure_pursuit_controller/src/include/: upper_controller.hpp
